--- a/en.lproj/Localizable.strings
+++ b/en.lproj/Localizable.strings
@@ -32,6 +32,9 @@
 "Appearance" = "Appearance";
 
 /* No comment provided by engineer. */
+"Are you sure you want to change the folder on Dropbox that Elements syncs to?" = "Are you sure you want to change the folder on Dropbox that Elements syncs to?";
+
+/* No comment provided by engineer. */
 "Are you sure you want to clear your scratchpad?" = "Are you sure you want to clear your scratchpad?";
 
 /* No comment provided by engineer. */
@@ -51,6 +54,9 @@
 
 /* No comment provided by engineer. */
 "Cancel" = "Cancel";
+
+/* No comment provided by engineer. */
+"Change Dropbox Folder" = "Change Dropbox Folder";
 
 /* No comment provided by engineer. */
 "Character Count" = "Character Count";
@@ -83,6 +89,9 @@
 "Create A Dropbox Account" = "Create A Dropbox Account";
 
 /* No comment provided by engineer. */
+"Create Folder Error" = "Create Folder Error";
+
+/* No comment provided by engineer. */
 "Creating /Elements folder" = "Creating /Elements folder";
 
 /* No comment provided by engineer. */
@@ -102,6 +111,9 @@
 
 /* No comment provided by engineer. */
 "document information" = "document information";
+
+/* No comment provided by engineer. */
+"Documentation" = "Documentation";
 
 /* No comment provided by engineer. */
 "Done" = "Done";
@@ -126,6 +138,9 @@
 
 /* No comment provided by engineer. */
 "Elements creates an 'Elements' folder in your Dropbox to hold your data.  Drop any text file you want to edit on your device in there." = "Elements creates an 'Elements' folder in your Dropbox to hold your data.  Drop any text file you want to edit on your device in there.";
+
+/* No comment provided by engineer. */
+"Elements stores your files your files on Dropbox in the /Elements folder by default. Do you want to select a different folder? " = "Elements stores your files your files on Dropbox in the /Elements folder by default. Do you want to select a different folder? ";
 
 /* No comment provided by engineer. */
 "Email" = "Email";
@@ -153,9 +168,6 @@
 
 /* No comment provided by engineer. */
 "Error Creating Local Folder" = "Error Creating Local Folder";
-
-/* No comment provided by engineer. */
-"Error Logging In" = "Error Logging In";
 
 /* No comment provided by engineer. */
 "Error Opening File" = "Error Opening File";
@@ -218,13 +230,7 @@
 "HTML File" = "HTML File";
 
 /* No comment provided by engineer. */
-"http://example.com" = "http://example.com";
-
-/* No comment provided by engineer. */
 "Inline" = "Inline";
-
-/* No comment provided by engineer. */
-"Its notebook is not yours." = "You don't have permission to access that notebook.";
 
 /* No comment provided by engineer. */
 "iTunes" = "iTunes";
@@ -260,7 +266,13 @@
 "Logout" = "Logout";
 
 /* No comment provided by engineer. */
+"Margins" = "Margins";
+
+/* No comment provided by engineer. */
 "Markdown Preview" = "Markdown Preview";
+
+/* No comment provided by engineer. */
+"Medium" = "Medium";
 
 /* No comment provided by engineer. */
 "Metadata Refresh Error" = "Metadata Refresh Error";
@@ -276,6 +288,9 @@
 
 /* No comment provided by engineer. */
 "Name ↓" = "Name ↓";
+
+/* No comment provided by engineer. */
+"Narrow" = "Narrow";
 
 /* No comment provided by engineer. */
 "New Folder" = "New Folder";
@@ -318,6 +333,9 @@
 
 /* No comment provided by engineer. */
 "Print" = "Print";
+
+/* No comment provided by engineer. */
+"Private Tumblelog" = "Private Tumblelog";
 
 /* No comment provided by engineer. */
 "Publish" = "Publish";
@@ -410,9 +428,6 @@
 "Signing In To Tumblr..." = "Signing In To Tumblr...";
 
 /* No comment provided by engineer. */
-"Signing In To Wordpress..." = "Signing In To Wordpress...";
-
-/* No comment provided by engineer. */
 "Signup Failed" = "Signup Failed";
 
 /* No comment provided by engineer. */
@@ -467,9 +482,6 @@
 "Untitled %ld.%@" = "Untitled %ld.%@";
 
 /* No comment provided by engineer. */
-"URL" = "URL";
-
-/* No comment provided by engineer. */
 "Username" = "Username";
 
 /* No comment provided by engineer. */
@@ -488,19 +500,22 @@
 "Welcome" = "Welcome";
 
 /* No comment provided by engineer. */
-"Welcome.txt" = "Welcome.txt";
+"Wide" = "Wide";
 
 /* No comment provided by engineer. */
 "Word Count" = "Word Count";
-
-/* No comment provided by engineer. */
-"Wordpress Sign In" = "Wordpress Sign In";
 
 /* No comment provided by engineer. */
 "Words (%d)" = "Words (%d)";
 
 /* No comment provided by engineer. */
 "Would you like to register your copy of Elements?  Registering allows us to tell you about important Elements bug fixes, new features and other cool stuff being worked on in the Second Gear garage." = "Would you like to register your copy of Elements?  Registering allows us to tell you about important Elements bug fixes, new features and other cool stuff being worked on in the Second Gear garage.";
+
+/* No comment provided by engineer. */
+"Yes" = "Yes";
+
+/* No comment provided by engineer. */
+"You don't have permission to access that notebook." = "You don't have permission to access that notebook.";
 
 /* No comment provided by engineer. */
 "Your device is not allowed to send mail" = "Your device is not allowed to send mail";
