--- a/es.lproj/Localizable.strings
+++ b/es.lproj/Localizable.strings
@@ -32,6 +32,9 @@
 "Appearance" = "Apariencia";
 
 /* No comment provided by engineer. */
+"Are you sure you want to change the folder on Dropbox that Elements syncs to?" = "Are you sure you want to change the folder on Dropbox that Elements syncs to?";
+
+/* No comment provided by engineer. */
 "Are you sure you want to clear your scratchpad?" = "¿Está seguro de que desea limpiar el bloc de notas?";
 
 /* No comment provided by engineer. */
@@ -51,6 +54,9 @@
 
 /* No comment provided by engineer. */
 "Cancel" = "Cancelar";
+
+/* No comment provided by engineer. */
+"Change Dropbox Folder" = "Change Dropbox Folder";
 
 /* No comment provided by engineer. */
 "Character Count" = "Recuento de caracteres";
@@ -83,6 +89,9 @@
 "Create A Dropbox Account" = "Crear una cuenta de Dropbox";
 
 /* No comment provided by engineer. */
+"Create Folder Error" = "Create Folder Error";
+
+/* No comment provided by engineer. */
 "Creating /Elements folder" = "Creación de su carpeta de elementos";
 
 /* No comment provided by engineer. */
@@ -102,6 +111,9 @@
 
 /* No comment provided by engineer. */
 "document information" = "información del documento";
+
+/* No comment provided by engineer. */
+"Documentation" = "Documentation";
 
 /* No comment provided by engineer. */
 "Done" = "Hecho";
@@ -126,6 +138,9 @@
 
 /* No comment provided by engineer. */
 "Elements creates an 'Elements' folder in your Dropbox to hold your data.  Drop any text file you want to edit on your device in there." = "Elements crea una carpeta 'Elements' en Dropbox para conservar sus datos. Arrastre y suelte cualquier archivo que quiera editar en su dispositivo en esta carpeta.";
+
+/* No comment provided by engineer. */
+"Elements stores your files your files on Dropbox in the /Elements folder by default. Do you want to select a different folder? " = "Elements stores your files your files on Dropbox in the /Elements folder by default. Do you want to select a different folder? ";
 
 /* No comment provided by engineer. */
 "Email" = "Correo electrónico";
@@ -153,9 +168,6 @@
 
 /* No comment provided by engineer. */
 "Error Creating Local Folder" = "Error al crear la carpeta local";
-
-/* No comment provided by engineer. */
-"Error Logging In" = "Error de acceso";
 
 /* No comment provided by engineer. */
 "Error Opening File" = "Error al abrir el archivo";
@@ -218,13 +230,7 @@
 "HTML File" = "Archivo HTML";
 
 /* No comment provided by engineer. */
-"http://example.com" = "http://example.com";
-
-/* No comment provided by engineer. */
 "Inline" = "En línea";
-
-/* No comment provided by engineer. */
-"Its notebook is not yours." = "No tiene permiso para acceder a ese bloc de notas.";
 
 /* No comment provided by engineer. */
 "iTunes" = "iTunes";
@@ -260,7 +266,13 @@
 "Logout" = "Cerrar sesión";
 
 /* No comment provided by engineer. */
+"Margins" = "Margins";
+
+/* No comment provided by engineer. */
 "Markdown Preview" = "Vista previa de Markdown";
+
+/* No comment provided by engineer. */
+"Medium" = "Medium";
 
 /* No comment provided by engineer. */
 "Metadata Refresh Error" = "Error de actualización de metadatos";
@@ -276,6 +288,9 @@
 
 /* No comment provided by engineer. */
 "Name ↓" = "Nombre ↓";
+
+/* No comment provided by engineer. */
+"Narrow" = "Narrow";
 
 /* No comment provided by engineer. */
 "New Folder" = "Nueva carpeta";
@@ -318,6 +333,9 @@
 
 /* No comment provided by engineer. */
 "Print" = "Imprimir";
+
+/* No comment provided by engineer. */
+"Private Tumblelog" = "Private Tumblelog";
 
 /* No comment provided by engineer. */
 "Publish" = "Publicar";
@@ -410,9 +428,6 @@
 "Signing In To Tumblr..." = "Inicio de sesión en Tumblr…";
 
 /* No comment provided by engineer. */
-"Signing In To Wordpress..." = "Inicio de sesión en Wordpress…";
-
-/* No comment provided by engineer. */
 "Signup Failed" = "El registro ha fallado";
 
 /* No comment provided by engineer. */
@@ -467,9 +482,6 @@
 "Untitled %ld.%@" = "Sin título %ld.%@";
 
 /* No comment provided by engineer. */
-"URL" = "URL";
-
-/* No comment provided by engineer. */
 "Username" = "Nombre de usuario";
 
 /* No comment provided by engineer. */
@@ -488,19 +500,22 @@
 "Welcome" = "Bienvenida";
 
 /* No comment provided by engineer. */
-"Welcome.txt" = "Bienvenida.txt";
+"Wide" = "Wide";
 
 /* No comment provided by engineer. */
 "Word Count" = "Recuento de palabras";
-
-/* No comment provided by engineer. */
-"Wordpress Sign In" = "Registrarse en Wordpress";
 
 /* No comment provided by engineer. */
 "Words (%d)" = "Palabras (%d)";
 
 /* No comment provided by engineer. */
 "Would you like to register your copy of Elements?  Registering allows us to tell you about important Elements bug fixes, new features and other cool stuff being worked on in the Second Gear garage." = "¿Desea registrar su copia de Elements?  El registro nos permite informarle acerca de la solución de errores importantes de Elements, nuevas características y otras funciones que están en proyecto en el taller de Second Gear.";
+
+/* No comment provided by engineer. */
+"Yes" = "Yes";
+
+/* No comment provided by engineer. */
+"You don't have permission to access that notebook." = "You don't have permission to access that notebook.";
 
 /* No comment provided by engineer. */
 "Your device is not allowed to send mail" = "Su dispositivo no está autorizado para enviar correo";
